--- a/validations.yml
+++ b/validations.yml
@@ -28,7 +28,7 @@ validations:
   ipv4:
     regex: /\A\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\z/
   url:
-    regex: /^(http(s)?|ftp|ssh):\/\/(([\w\-\:]+)\@)?(([A-Za-z0-9-]+\.)*([A-Za-z0-9-]+\.[A-Za-z0-9]+))+((\/?)(([A-Za-z0-9\._\-]+)(\/){0,1}[A-Za-z0-9.-\/]*)){0,1}/
+    regex: /^(http(s)?|ftp|ssh|mysql):\/\/(([\w\-\:]+)\@)?(([A-Za-z0-9-]+\.)*([A-Za-z0-9-]+\.[A-Za-z0-9]+))+((\/?)(([A-Za-z0-9\._\-]+)(\/){0,1}[A-Za-z0-9.-\/]*)){0,1}/
   smtp_user:
     # email | username
     regex: "/^
